[package]
name = "erp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls","chrono"] }
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4.40", features = ["serde"] }
serde_json = "1.0.140"
calamine = "0.26.1"
thiserror = "2.0.12"
polars = { version = "0.46.0", features = ["lazy","serde","json","csv"] }
csv = "1.3"
uuid = "1.16.0"
log = "0.4.26"

